fixed footer spacing

--- a/css/footer.css
+++ b/css/footer.css
@@ -6,8 +6,12 @@
     font-size: 16px;
     font-weight: 900;
     display: flex;
-  
+    width: 390px; /*make this the proper way*/
+    margin-left: -18px;
+    margin-bottom: -10px;
   }
+
+
 .text {
   float:left;
   width: 50%;
